agent talks, correcting no double agent; tutorial, gameflow and interface improvements

--- a/src/client/agents/agentinarmory.styl
+++ b/src/client/agents/agentinarmory.styl
@@ -9,8 +9,11 @@
   width 525px
   height 335px
   border 2px solid ghostwhite
-  /*background-image url('../../../assets/img/bg/metal_diamonds.jpg')*/
-  // background-color silver
+  display flex
+  flex-direction row
+  flex-wrap wrap
+  align-items center
+  justify-content center
 
   .agent-card
     opacity 1
