--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -77,18 +77,22 @@
 
 #SkipIntroButton
   position absolute
-  top 720px
-  left 350px
   width 160px
   height 50px
+  left 20px
+  bottom 20px
   color white
   background-color black
-  font-size 1.2em
+  font-size 1.1em
 
 #NewGameStart
   position absolute
-  width 400px
-  left 620px
+  width 600px
+  height 300px
+  border 1px solid red
+  left 520px
   top 60px
+  font-size 1.3em
   font-weight bold
+  text-align center
   color red
