--- a/src/client/introduction/intro.screen.styl
+++ b/src/client/introduction/intro.screen.styl
@@ -57,21 +57,21 @@
       padding-top 5px
       padding-bottom 5px
     li.pursuit
-      background-image url('../../../assets/img/missions/actions/pursuit.jpg')
+      background-image url('../../../assets/img/missions/actions/pursuit.png')
     li.hit
-      background-image url('../../../assets/img/missions/actions/hit.jpg')
+      background-image url('../../../assets/img/missions/actions/hit.png')
     li.close_combat
-      background-image url('../../../assets/img/missions/actions/close_combat.jpg')
+      background-image url('../../../assets/img/missions/actions/close_combat.png')
     li.decipher
       background-image url('../../../assets/img/missions/actions/decipher.jpg')
     li.tap
-      background-image url('../../../assets/img/missions/actions/tap.jpg')
+      background-image url('../../../assets/img/missions/actions/tap.png')
     li.monitor
-      background-image url('../../../assets/img/missions/actions/monitor.jpg')
+      background-image url('../../../assets/img/missions/actions/monitor.png')
     li.puppet
-      background-image url('../../../assets/img/missions/actions/puppet.jpg')
+      background-image url('../../../assets/img/missions/actions/puppet.png')
     li.infiltrate
-      background-image url('../../../assets/img/missions/actions/infiltrate.jpg')
+      background-image url('../../../assets/img/missions/actions/infiltrate.png')
     li.hide
       background-image url('../../../assets/img/missions/actions/hide.jpg')
     li.improvAll
@@ -80,11 +80,11 @@
       background-image url('../../../assets/img/missions/actions/fail_all_colors.jpg')
 
     li.improv.operations
-      background-image url('../../../assets/img/missions/actions/improv_op.jpg')
+      background-image url('../../../assets/img/missions/actions/i.png')
     li.improv.electronics
-      background-image url('../../../assets/img/missions/actions/improv_el.jpg')
+      background-image url('../../../assets/img/missions/actions/i.png')
     li.improv.stealth
-      background-image url('../../../assets/img/missions/actions/improv_st.jpg')
+      background-image url('../../../assets/img/missions/actions/i.png')
 
   p
     padding 10px
