--- a/src/client/lab/laboratory.styl
+++ b/src/client/lab/laboratory.styl
@@ -162,19 +162,19 @@
       border-radius: 20px;
   }
   .side.front {
-    background-image: url('../../../assets/img/missions/actions/pursuit.jpg');
+    background-image: url('../../../assets/img/missions/actions/pursuit.png');
   }
   .side.top {
-    background-image: url('../../../assets/img/missions/actions/hit.jpg');
+    background-image: url('../../../assets/img/missions/actions/hit.png');
   }
   .side.right {
-    background-image: url('../../../assets/img/missions/actions/close_combat.jpg');
+    background-image: url('../../../assets/img/missions/actions/close_combat.png');
   }
   .side.left {
-    background-image: url('../../../assets/img/missions/actions/improv_op.jpg');
+    background-image: url('../../../assets/img/missions/actions/i.png');
   }
   .side.bottom {
-    background-image: url('../../../assets/img/missions/actions/improv_op.jpg');
+    background-image: url('../../../assets/img/missions/actions/i.png');
   }
   #dice .cover, #dice .inner {
       background: #101010;
