--- a/src/client/navs/dashboardtotutorial.styl
+++ b/src/client/navs/dashboardtotutorial.styl
@@ -1,8 +1,8 @@
 #DashboardToTutorial
   position absolute
-  top 720px
-  left 1050px
   width 120px
   height 45px
   background-color darkred
   font-size 1.2em
+  right 20px
+  bottom 20px
