--- a/src/client/tutorial/choose.campaign.styl
+++ b/src/client/tutorial/choose.campaign.styl
@@ -1,13 +1,21 @@
 #ChooseCampaign
   position absolute
-  border 5px black solid
+  border 5px white solid
   border-radius 1em
-  background-color darkgrey
-  width 600px
-  height 600px
+  background rgba(0, 0, 0, 0.9)
+  color white
+  width 800px
+  height 300px
   top 120px
-  left 520px
+  left -400px
+  margin-left 50%
   font-size 1.4em
   font-weight bold
   text-align center
   z-index 10001
+
+  button
+    position absolute
+    background rgba(0, 0, 0, 0.9)
+    bottom 20px
+    left 330px
