--- a/src/client/mission/missioncard/action.styl
+++ b/src/client/mission/missioncard/action.styl
@@ -31,21 +31,21 @@
   background-repeat no-repeat
 
 .action.pursuit
-  background-color red
+  background-color darkred
   background-image url('../../../../assets/img/missions/actions/pursuit.png')
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 25px black
 
 .action.close_combat
-  background-color red
+  background-color darkred
   background-image url('../../../../assets/img/missions/actions/close_combat.png')
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 25px black
 
 .action.hit
-  background-color red
+  background-color darkred
   background-image url('../../../../assets/img/missions/actions/hit.png')
   background-size 100% 100%
   background-repeat no-repeat
@@ -71,19 +71,22 @@
   box-shadow inset 0 0 25px black
 
 .action.improv.operations
-  background url('../../../../assets/img/missions/actions/improv_op.jpg')
+  background url('../../../../assets/img/missions/actions/i.png')
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 25px black
+  background-color darkred
 
 .action.improv.stealth
-  background url('../../../../assets/img/missions/actions/improv_st.jpg')
+  background url('../../../../assets/img/missions/actions/i.png')
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 25px black
+  background-color gold
 
 .action.improv.electronics
-  background url('../../../../assets/img/missions/actions/improv_el.jpg')
+  background url('../../../../assets/img/missions/actions/i.png')
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 25px black
+  background-color darkgreen
