--- a/src/client/mission/missioncard/tasks/task.styl
+++ b/src/client/mission/missioncard/tasks/task.styl
@@ -5,14 +5,15 @@
 .task-fieldset-legend
   position absolute
   color white
+  z-index 1
 
 .task.on-mission
   position relative
   display inline-block
   left 0px
   width 380px
-  height 105px
-  margin-top 30px
+  height 110px
+  margin-top 20px
   margin-left 10px
 
 /*
@@ -23,7 +24,16 @@
 */
 
 .task.current
-  background-color grey
+  background-color rgba(0, 0, 0, 0.5)
+  border-radius 1em
+  border 1px inset
   padding-top 10px
   padding-left 15px
   margin-left 0px
+
+.taskmission-checkbox
+  position absolute
+  height 64px
+  width 64px
+  top 0px
+  right 0px
