--- a/src/client/mission/results/window.styl
+++ b/src/client/mission/results/window.styl
@@ -1,12 +1,14 @@
 #MissionResultsWindow
   position absolute
+  color white
   left 50%
-  margin-left -410px
-  width 820px
-  height 860px
+  margin-left -390px
+  top 30px
+  width 780px
+  height 800px
   text-align center
-  background-color silver
-  border 5px solid black
+  background rgba(0, 0, 0, 0.9)
+  border 5px solid white
   border-radius 1em
   animation flipInX 1s
   z-index 1001
