--- a/src/client/tutorial/choose.class.styl
+++ b/src/client/tutorial/choose.class.styl
@@ -1,6 +1,6 @@
-#PlayerChoosesAgentClass
+#PlayerChoosesAvatarsClass
   position absolute
-  border 5px black solid
+  border 5px white solid
   border-radius 1em
   background-color black
   color ghostwhite
@@ -14,23 +14,81 @@
   z-index 10011
 
 #ChooseOperative
-  width 150px
-  height 150px
+  position absolute
+  top 120px
+  left 40px
+  width 190px
+  height 190px
   background-color black
   border 3px solid ghostwhite
   border-radius 0.5em
+
+  label
+    visibility hidden
+    position relative
+    bottom -50px
+
+#ChooseOperative.active
+  box-shadow 0 0 50px white
+
+  label
+    visibility visible
 
 #ChooseTechnician
-  margin 20px
-  width 150px
-  height 150px
+  position absolute
+  top 80px
+  left 305px
+  width 190px
+  height 190px
   background-color black
   border 3px solid ghostwhite
   border-radius 0.5em
 
+  label
+    visibility hidden
+    position relative
+    bottom -20px
+
+#ChooseTechnician.active
+  box-shadow 0 0 50px white
+
+  label
+    visibility visible
+
 #ChooseSpy
-  width 150px
-  height 150px
+  position absolute
+  top 120px
+  right 40px
+  width 190px
+  height 190px
   background-color black
   border 3px solid ghostwhite
   border-radius 0.5em
+
+  label
+    visibility hidden
+    position relative
+    bottom -25px
+
+#ChooseSpy.active
+  box-shadow 0 0 50px white
+
+  label
+    visibility visible
+
+#PlayerChoosesAvatarsClassMessage
+  position absolute
+  bottom 30px
+  width 400px
+  left 200px
+
+#PlayerChoosesAvatarAvatarPicture
+  position absolute
+  bottom 100px
+  left 315px
+
+#ConfirmPlayerAgentAvatarButton
+  position absolute
+  bottom 20px
+  right 20px
+  background-color black
