--- a/src/client/tutorial/tutorial.screen.styl
+++ b/src/client/tutorial/tutorial.screen.styl
@@ -4,15 +4,16 @@
   height 860px
   left 50%
   margin-left -820px
-  background rgba(255, 0, 0, 0.8)
+  background rgba(0, 0, 0, 0.8)
 
 #CompleteTutorialButton
   position absolute
-  top 620px
-  left 550px
+  top 420px
+  left 700px
   width 240px
   height 90px
-  background-color darkred
+  color white
+  background-color black
   font-size 1.5em
 
 #TutorialToDashboardButton
