rotating die implemented need better rotations, talk to agents works now, transition to mission through briefing, about 90% completer ready for beta testing

--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -96,3 +96,15 @@
     font-weight bold
     font-size 1.2em
     color ghostwhite
+
+#BriefingAnnounce
+  position absolute
+  background-color grey
+  border 3px solid black
+  border-radius 1em
+  font-size 1.3em
+  max-width 1040px
+  top 320px
+  left 300px
+  padding 50px
+  z-index 101
