--- a/src/client/dashboard/missionswindow/missions.window.styl
+++ b/src/client/dashboard/missionswindow/missions.window.styl
@@ -48,6 +48,8 @@
   height 90px
   top 10px
   right 10px
+  color white
+  background rgba(0, 0, 0, 1)
 
 #RobBankButton
   position absolute
@@ -55,6 +57,8 @@
   height 90px
   top 10px
   right 110px
+  color white
+  background rgba(0, 0, 0, 1)
 
 #OldDebtButton
   position absolute
@@ -62,6 +66,8 @@
   height 90px
   top 110px
   right 10px
+  color white
+  background rgba(0, 0, 0, 1)
 
 #PurgeEvidenceButton
   position absolute
@@ -69,6 +75,8 @@
   height 90px
   top 110px
   right 110px
+  color white
+  background rgba(0, 0, 0, 1)
 
 #SilenceRatButton
   position absolute
@@ -76,6 +84,8 @@
   height 90px
   top 210px
   right 110px
+  color white
+  background rgba(0, 0, 0, 1)
 
 #InnerCircleButton
   position absolute
@@ -83,3 +93,5 @@
   height 90px
   top 210px
   right 10px
+  color white
+  background rgba(0, 0, 0, 1)
