--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -67,3 +67,15 @@
     position absolute
     bottom 10px
     left 80px
+
+#ArmoryAnnounce
+  position absolute
+  background-color grey
+  border 3px solid black
+  border-radius 1em
+  font-size 1.3em
+  max-width 1040px
+  top 320px
+  left 300px
+  padding 50px
+  z-index 101
