--- a/src/client/dashboard/endgame/endgame.window.styl
+++ b/src/client/dashboard/endgame/endgame.window.styl
@@ -1,13 +1,17 @@
 #EndGameWindow
   position absolute
-  width 1640px
-  height 860px
-  background-color silver
-  color black
+  width 1634px
+  height 854px
+  background rgba(0, 0, 0, 0.9)
+  color white
+  padding-top 50px
   font-size 1.5em
   font-weight bold
   text-align center
   z-index 1001
+
+  button
+    background rgba(0, 0, 0, 0.9)
 
   div
     display block
