--- a/src/client/dashboard/missiontalk/mission.talk.styl
+++ b/src/client/dashboard/missiontalk/mission.talk.styl
@@ -5,7 +5,7 @@
   width 1240px
   height 600px
   display flex
-  flex-direction row
+  flex-direction column
   flex-wrap nowrap
   align-items center
   justify-content space-around
