--- a/src/client/mission/tabletoptier/tabletop/tabletop.styl
+++ b/src/client/mission/tabletoptier/tabletop/tabletop.styl
@@ -1,10 +1,20 @@
 #TableTop
   position absolute
-  top 50px
-  left 30px
-  width 540px
-  height 550px
+  top 40px
+  left -60px
+  width 670px
+  height 620px
   border 2px solid maroon
+
+#TableTopDiceContainer
+  position absolute
+  width 670px
+  min-height 300px
+  display flex
+  flex-wrap wrap
+  flex-direction row
+  align-items center
+  justify-content center
 
 #MissionStartStatus
   position absolute
