--- a/src/client/dashboard/optionswindow/options.window.styl
+++ b/src/client/dashboard/optionswindow/options.window.styl
@@ -38,7 +38,17 @@
   position absolute
   background rgba(125, 125, 0, 0.9)
   right 25px
-  bottom 160px
+  top 160px
   height 50px
-  width 100px
+  width 220px
   font-size 1.3em
+
+#ProvideFeedbackButton
+  position absolute
+  background rgba(0, 0, 0, 0.9)
+  right 25px
+  bottom 220px
+  height 40px
+  width 190px
+  color white
+  font-size 1.2em
