--- a/src/client/agents/agentequipcontent.styl
+++ b/src/client/agents/agentequipcontent.styl
@@ -2,6 +2,7 @@
   position absolute
   width 1634px
   height 854px
+  box-shadow 0 0 30px tan
 
   #ArmoryGameCashCounter
     position absolute
@@ -38,26 +39,3 @@
     width 150px
     height 45px
     background-color black
-
-  #ArmoryCodeRed
-    position absolute
-    top 5px
-    left 5px
-    background-color red
-
-  #ArmoryCodeYellow
-    position absolute
-    top 5px
-    left 35px
-    background-color yellow
-
-  #ArmoryCodeGreen
-    position absolute
-    top 5px
-    left 65px
-    background-color green
-
-.armory-code
-  width 20px
-  height 20px
-  border-radius 10px
