--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -9,8 +9,8 @@
   background-image url('../../../assets/img/bg/armory_bg.jpg')
   background-size 100% 100%
   animation fadeIn 1s
-  border 3px solid tan
-  box-shadow inset 0 0 50px tan
+  // border 3px solid tan
+  // box-shadow inset 0 0 50px tan
 
 #ArmoryScreenLabel
   position absolute
