--- a/src/client/briefing/country.of.operation.styl
+++ b/src/client/briefing/country.of.operation.styl
@@ -55,7 +55,7 @@
       z-index 1000
 
       .Dropdown-option
-        background-color silver
+        background rgba(0, 120, 240, 0.8)
         box-sizing border-box
         cursor pointer
         display block
