--- a/src/client/dashboard/optionswindow/options.game.window.styl
+++ b/src/client/dashboard/optionswindow/options.game.window.styl
@@ -17,11 +17,14 @@
     font-weight bold
 
   button
-    background-color red
     color black
 
 .save-game-button
   display inline-block
+  background-color yellow
+
+.load-game-button
+  background-color red
 
 #SaveGameMessage
   position absolute
@@ -46,3 +49,9 @@
   background-color ghostwhite
   border 5px solid black
   border-radius 1em
+
+#UpdateSaveGamesInfoButton
+  position absolute
+  top 0px
+  right 0px
+  background rgba(127, 127, 127, 0.9)
