--- a/src/client/dashboard/pointer.styl
+++ b/src/client/dashboard/pointer.styl
@@ -16,11 +16,11 @@
 
 #ToOptions
   top 350px
-  color red
+  color silver
 
 #ToStatuses
   top 400px
-  color gold
+  color silver
 
 #ToStrategical
   top 25px
