--- a/src/client/mission/agentstier/buttons/escapebutton.styl
+++ b/src/client/mission/agentstier/buttons/escapebutton.styl
@@ -1,6 +1,9 @@
-.escape-button {
+.escape-button
   position absolute
-  border 5px solid purple
-  bottom 0px
-  right 0px
-}
+  border 3px solid black
+  height 50px
+  bottom 10px
+  right 10px
+  background rgba(155, 10, 155, 0.8)
+  font-size 1.3em
+  animation 1s pulse 2s infinite
