--- a/src/client/navs/dashboardtobriefing.styl
+++ b/src/client/navs/dashboardtobriefing.styl
@@ -2,6 +2,10 @@
   position absolute
   top 10px
   left 30px
-  border-right-color teal
+  color grey
+  border-right-color grey
   transform rotate(90deg)
   font-size 1.2em
+
+#DashboardToBriefing:after
+  border-top-color grey
