--- a/src/client/navs/dashboardtocommand.styl
+++ b/src/client/navs/dashboardtocommand.styl
@@ -2,5 +2,9 @@
   position absolute
   top 35px
   right 55px
-  border-right-color teal
+  color grey
+  border-right-color grey
   font-size 1.2em
+
+#DashboardToCommand:after
+  border-top-color grey
