--- a/src/client/app/feedbackform/feedback.form.styl
+++ b/src/client/app/feedbackform/feedback.form.styl
@@ -2,7 +2,7 @@
   position absolute
   width 800px
   height 800px
-  left 420px
+  left 580px
   top 50px
   background-color silver
   border 3px solid black
@@ -38,6 +38,15 @@
     width 200px
     padding 0
     margin 0
+
+#FeedbackFormCloseButton
+  position absolute
+  width 20px
+  height 20px
+  border-radius 100%
+  background rgba(0, 0, 0, 1)
+  right 10px
+  top 10px
 
 .feedbackform-submit-error
   position absolute
