--- a/src/client/command/command.styl
+++ b/src/client/command/command.styl
@@ -71,3 +71,16 @@
   background rgba(255, 0, 0, 1)
   top 100px
   left 0px
+
+#CommandScreenMissionStatistics
+  position absolute
+  display flex
+  flex-wrap wrap
+  align-items center
+  padding 10px
+  width 180px
+  height 150px
+  top 150px
+  left -10px
+  color white
+  font-size 1.4em
