--- a/src/client/dashboard/country.state.overview.styl
+++ b/src/client/dashboard/country.state.overview.styl
@@ -1,12 +1,12 @@
 #CountryStateOverview
   position absolute
-  right 160px
+  right 200px
   top 130px
   transform rotate(-90deg)
 
 #EndGameNotSoSecretNowIndicator
   position absolute
-  width 260px
+  width 212px
   height 3px
   background-color white
   top 257px
@@ -16,14 +16,15 @@
   position absolute
 
 .country-obscurity-bar-template
-  margin 10px
-  width 22px
+  margin 9px
+  width 15px
   height 300px
+  border-radius 5px
 
 .country-attention-level
   transform rotate(90deg)
   position absolute
-  top 20px
+  bottom 20px
   color white
   z-index 1
 
@@ -31,6 +32,14 @@
   position absolute
   top 40px
   left -44px
-  color red
+  color white
   transform rotate(90deg)
   width 150px
+
+.country-obscuirity-indicator
+  position absolute
+  height 12px
+  width 15px
+  background rgba(33, 33, 33, 0.9)
+  border 1px solid black
+  border-radius 100%
