--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -7,8 +7,8 @@
   // background-image url('../../../assets/img/bg/test_background4.jpg')
   background-image url('../../../assets/img/bg/dashboard.jpg')
   background-size 100% 100%
-  border 3px teal solid
-  box-shadow inset 0 0 50px darkcyan
+  border 3px grey solid
+  box-shadow inset 0 0 50px grey
   animation fadeIn 1.5s
 
 #DashboardScreenLogout
