--- a/src/client/dashboard/missiontalk/agent.talk.profile.styl
+++ b/src/client/dashboard/missiontalk/agent.talk.profile.styl
@@ -1,4 +1,4 @@
-.agent-talk-profile
+.agent-talks-profile
   width 168px
   height 180px
 
@@ -10,17 +10,17 @@
   background-color red
   text-align center
   width 210px
-  top -70px
-  left 30px
+  top -80px
+  left 80px
   z-index 10
 
 .agent-talk:before
   content ""
   position absolute
   top 100%
-  left 46px
+  left 26px
   width 0
   height 0
   border-right 13px solid transparent
-  border-top 39px solid red
+  border-top 49px solid red
   border-left 13px solid transparent
