--- a/src/client/dashboard/missiontalk/mission.talk.styl
+++ b/src/client/dashboard/missiontalk/mission.talk.styl
@@ -6,7 +6,7 @@
   height 600px
   display flex
   flex-direction column
-  flex-wrap nowrap
+  flex-wrap wrap
   align-items center
   justify-content space-around
   background-color darkcyan
