--- a/src/client/dashboard/strategicalwindow/strategical.window.styl
+++ b/src/client/dashboard/strategicalwindow/strategical.window.styl
@@ -9,11 +9,12 @@
 
 #IntermediateGoalButton
   position absolute
-  top 320px
+  top 65px
   left 20px
-  width 250px
-  height 90px
+  width 320px
+  height 50px
   background rgba(0, 0, 0, 1)
   color ghostwhite
   border-radius 0em
-  font-size 2em
+  font-size 1.8em
+  text-align center
