--- a/src/client/lab/die.animations.styl
+++ b/src/client/lab/die.animations.styl
@@ -28,3 +28,25 @@
     87% { transform: translate3d(0px,-100px,-800px) }
     100% { transform: translate3d(-200px,-50px,-400px) }
 }
+
+@keyframes waggle {
+    0% { transform: translateZ(100px) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
+    16% { transform: translateZ(100px) rotateX(270deg) rotateY(180deg) rotateZ(180deg); }
+    33% { transform: translateZ(100px) rotateX(180deg) rotateY(360deg) rotateZ(270deg); }
+    50% { transform: translateZ(100px) rotateX(360deg) rotateY(360deg) rotateZ(360deg); }
+    66% { transform: translateZ(100px) rotateX(360deg) rotateY(90deg) rotateZ(180deg); }
+    83% { transform: translateZ(100px) rotateX(180deg) rotateY(180deg) rotateZ(0deg); }
+    100% { transform: translateZ(100px) rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
+}
+
+@keyframes trot {
+    0% {
+      transform: translateZ(200px) rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+    }
+    16% { transform: translateZ(200px) rotateX(270deg) rotateY(180deg) rotateZ(180deg); }
+    33% { transform: translateZ(200px) rotateX(180deg) rotateY(0deg) rotateZ(270deg); }
+    50% { transform: translateZ(200px) rotateX(360deg) rotateY(180deg) rotateZ(360deg); }
+    66% { transform: translateZ(200px) rotateX(360deg) rotateY(90deg) rotateZ(180deg); }
+    83% { transform: translateZ(200px) rotateX(180deg) rotateY(180deg) rotateZ(0deg); }
+    100% { transform: translateZ(200px) rotateX(0deg) rotateY(0deg) rotateZ(0deg); }
+}
