--- a/src/client/mission/tabletoptier/tabletop/buttons/actionbutton.styl
+++ b/src/client/mission/tabletoptier/tabletop/buttons/actionbutton.styl
@@ -3,8 +3,12 @@
   width 180px
   height 100px
   border 5px solid darkred
+  border-radius 1em
+  background rgba(255, 255, 0, 0.9)
+  font-size 1.7em
   bottom 1px
   right 1px
+  animation 2s pulse 1s infinite
 
 #MissionStartMessage
   position absolute
