--- a/src/client/tutorial/hints/upgrade.training.hint.styl
+++ b/src/client/tutorial/hints/upgrade.training.hint.styl
@@ -1,7 +1,7 @@
-#AnotherEquipmentUseHint
+#UpgradeTrainingHint
   position relative
-  top 260px
-  right -290px
+  top 60px
+  right -1270px
   width 0
   height 0
   border-top 27px solid transparent
@@ -10,7 +10,7 @@
   z-index 11
   animation 1s pulseAngled 2s infinite
 
-#AnotherEquipmentUseHint:after
+#UpgradeTrainingHint:after
   content ''
   position absolute
   border 0 solid transparent
@@ -23,13 +23,14 @@
   transform rotate(45deg)
   animation 1s pulseFortyFive 2s infinite
 
-#AnotherEquipmentUseHintText
+#UpgradeTrainingHintText
   position relative
-  top 330px
-  right -280px
+  top -10px
+  right 100px
   max-width 150px
   text-align center
   padding 5px
   font-size 1.2em
   background-color white
   z-index 11
+  transform rotate(40deg)
