help screen component, rewriting texts of helpscreen, innerCircle mission and operative agent, couple adjustments adhereing to gameplay and game logic

--- a/src/client/agents/armory.screen.styl
+++ b/src/client/agents/armory.screen.styl
@@ -35,7 +35,8 @@
   left 400px
   width 840px
   height 600px
-  background-color honeydew
+  padding 10px
+  background rgba(180, 140, 40, 0.8)
   border 5px solid black
   z-index 1011
 
