--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -61,12 +61,14 @@
   text-align center
   font-size 1.2em
   font-weight bold
+  padding 10px
   top 100px
   left 400px
   width 840px
   height 600px
-  background-color honeydew
+  background rgba(40, 40, 70, 0.9)
   border 5px solid black
+  color white
   z-index 1011
 
 /* for $ */
