--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -96,3 +96,17 @@
   font-weight bold
   text-align center
   color red
+
+#DashboardTutorial
+  position absolute
+  text-align center
+  font-size 1.2em
+  top 100px
+  left 400px
+  width 840px
+  height 600px
+  padding 10px
+  background rgba(0, 0, 0, 0.9)
+  color white
+  border 5px solid black
+  z-index 1011
