--- a/src/client/dashboard/playerswindow/players.window.styl
+++ b/src/client/dashboard/playerswindow/players.window.styl
@@ -22,11 +22,21 @@
   span
     font-size 1.1em
 
-#PlayerHelpHint
+.player-help-hint
   position absolute
-  bottom -655px
+  width 300px
+  bottom -685px
   left 0px
-  text-align right
+  text-align center
+
+.player-help-hint-mission-screen
+  position absolute
+  width 300px
+  left 400px
+  bottom 10px
+  text-align center
+  color white
+  font-size 1.2em
 
 #PlayerOperationsCapability
   position absolute
@@ -41,16 +51,3 @@
   right -100px
   font-size 1.25em
   background-color black
-
-#DashboardTutorial
-  position absolute
-  text-align center
-  font-size 1.2em
-  font-weight bold
-  top 100px
-  left 400px
-  width 840px
-  height 600px
-  background-color honeydew
-  border 5px solid black
-  z-index 1011
