--- a/src/client/mission/agentstier/buttons/backtomission.styl
+++ b/src/client/mission/agentstier/buttons/backtomission.styl
@@ -1,4 +1,7 @@
 .backtomission-button
   position absolute
-  left 400px
-  top 160px
+  left 420px
+  top 170px
+  color white
+  background rgba(0, 0, 0, 0.9)
+  z-index 1
