--- a/src/client/mission/mission.screen.styl
+++ b/src/client/mission/mission.screen.styl
@@ -46,10 +46,11 @@
   text-align center
   font-size 1.2em
   font-weight bold
+  padding 10px
   top 100px
   left 400px
   width 840px
   height 600px
-  background-color honeydew
+  background rgba(50, 50, 50, 1)
   border 5px solid black
   z-index 1011
