patreon printscreens, proper handling of sounds, language select and others styling

--- a/src/client/app/language.select.styl
+++ b/src/client/app/language.select.styl
@@ -1,11 +1,10 @@
 .Dropdown-root
-  background-color aliceblue
-  border none
-  border-radius 1em
-  color #000
+  background rgba(0, 0, 0, 0.9)
+  border 1px solid black
+  color white
   display block
   font-weight bold
-  height 25px
+  height 30px
   line-height 1.8
   margin 0 10px 0 0
   padding 0 1em
@@ -13,7 +12,7 @@
   right 10px
   text-align center
   transition all 1000ms ease
-  top 100px
+  top 200px
   width 100px
   z-index 100
 
@@ -34,8 +33,7 @@
     z-index 1000
 
     div.Dropdown-option
-      background-color aliceblue
-      border-radius 1em
+      background rgba(0, 0, 0, 0.9)
       box-sizing border-box
       cursor pointer
       display block
