--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -14,7 +14,7 @@
 #BriefingMissionShiftRight
   position absolute
   top 265px
-  left 1110px
+  left 1132px
   width 0
   height 0
   border-top 60px solid transparent
@@ -48,7 +48,7 @@
   height 50px
   left 720px
   top -25px
-  background-color grey
+  background-color darkslateblue
   border 5px solid black
   border-radius 1em
   text-align center
