--- a/src/client/dashboard/optionswindow/options.window.styl
+++ b/src/client/dashboard/optionswindow/options.window.styl
@@ -3,8 +3,8 @@
   // background-image url('../../../../assets/img/bg/smooth_metal.jpg')
   width 1634px
   height 854px
-  color black
-  background rgba(0, 255, 0, 0.3)
+  color white
+  background rgba(72, 61, 139, 0.3)
   animation animatedBackground 2s
 
   .options-form
@@ -37,18 +37,19 @@
 #RetireGameButton
   position absolute
   background rgba(125, 125, 0, 0.9)
-  right 25px
-  top 160px
+  right 15px
+  bottom 200px
   height 50px
   width 220px
+  color black
   font-size 1.3em
 
 #ProvideFeedbackButton
   position absolute
   background rgba(0, 0, 0, 0.9)
-  right 25px
-  bottom 220px
-  height 40px
+  right 15px
+  bottom 135px
+  height 50px
   width 190px
   color white
   font-size 1.2em
