--- a/src/client/dashboard/pointer.styl
+++ b/src/client/dashboard/pointer.styl
@@ -23,8 +23,11 @@
   color silver
 
 #ToStrategical
+  position absolute
   top 25px
+  left 1550px
   color gold
+  cursor pointer
 
 #ToCollection
   top 450px
