--- a/src/client/navs/tomission.styl
+++ b/src/client/navs/tomission.styl
@@ -2,9 +2,11 @@
   position absolute
   top 10px
   right 10px
-  width 100px
+  width 150px
   height 50px
-  color gold
-  background-color black
+  color black
+  background rgba(255, 215, 0, 0.9)
   font-size 1.1em
   text-shadow 2px 2px 8px gold
+  box-shadow 0 0 20px white
+  animation 3s pulse 2s infinite
