--- a/src/client/briefing/agent.token.styl
+++ b/src/client/briefing/agent.token.styl
@@ -2,7 +2,7 @@
   width 65px
   height 65px
   margin 0px 10px 0px 10px
-  border 1px solid brown
+  border 1px solid grey
   border-radius 0.8em
   background-size 100% 100%
 
