--- a/src/client/briefing/missionlist.table.styl
+++ b/src/client/briefing/missionlist.table.styl
@@ -16,7 +16,7 @@
 
     th
       height 39px
-      background-color darkred
+      background-color darkslateblue
       color white
       padding-left 5px
       padding-right 5px
