sales pitch basic, goals hint, travel action proper handling

--- a/src/client/dashboard/pointer.styl
+++ b/src/client/dashboard/pointer.styl
@@ -5,22 +5,25 @@
 #ToContest
   top 300px
   color silver
+  font-size 0.8em
 
 #ToEnhancements
   top 200px
-  color gold
+  color silver
 
 #ToLog
   top 250px
   color silver
+  font-size 0.8em
 
 #ToOptions
   top 350px
   color silver
+  font-size 0.8em
 
 #ToStatuses
   top 400px
-  color silver
+  color gold
 
 #ToStrategical
   position absolute
