--- a/src/client/briefing/country.of.operation.styl
+++ b/src/client/briefing/country.of.operation.styl
@@ -1,11 +1,23 @@
 #CountryOfOperationText
   color white
+  font-size 1.3em
+  background rgba(72, 61, 137, 0.9)
+  display block
+  text-align center
+
+  div
+    // background rgba(255, 215, 0, 0.9)
+    padding-left 5px
+    padding-right 5px
+    color black
+    font-size 1.4em
+    font-weight bold
 
 #TravelToText
   position absolute
   width 170px
   left 0px
-  top 47px
+  top 87px
   color white
 
 #CountryOfOperation.animated
@@ -15,10 +27,11 @@
   position absolute
   background rgba(0, 0, 0, 0.5)
   width 250px
-  height 200px
+  height 160px
   right 160px
   bottom 300px
   animation zoomInRight 1.4s
+  z-index 1
 
   .countryofoperation-root
     background rgba(0, 120, 240, 0.8)
@@ -31,7 +44,7 @@
     margin 10px
     padding 0 1em
     position absolute
-    top 90px
+    top 110px
     left 80px
     text-align center
     transition all 1000ms ease
