--- a/src/client/dashboard/optionswindow/options.window.styl
+++ b/src/client/dashboard/optionswindow/options.window.styl
@@ -53,3 +53,13 @@
   width 190px
   color white
   font-size 1.2em
+
+#SalesPitchToggle
+  position absolute
+  background-color yellow
+  right 15px
+  bottom 255px
+  height 50px
+  width 190px
+  color black
+  font-size 1.2em
