paypal testing live mode, incorporated feedback from Dan - solved savegames info

--- a/src/client/talk/talk.screen.styl
+++ b/src/client/talk/talk.screen.styl
@@ -4,6 +4,7 @@
   height 860px
   left 50%
   margin-left -820px
+  border 1px solid white
   animation fadeIn 1.5s
 
 #TalkToDashboard
@@ -25,3 +26,31 @@
   background-color darkgreen
   font-size 1.5em
   color silver
+
+#TalkScreenLabel
+  position absolute
+  padding-left 10px
+  padding-right 10px
+  min-width 200px
+  height 50px
+  left 720px
+  top -25px
+  background-color grey
+  border 5px solid black
+  border-radius 1em
+  text-align center
+  font-weight bold
+  font-size 1.5em
+  z-index 10101
+
+#TalkAnnounce
+  position absolute
+  background-color grey
+  border 3px solid black
+  border-radius 1em
+  font-size 1.3em
+  max-width 1040px
+  top 320px
+  left 300px
+  padding 50px
+  z-index 101
