lounge, implemented storytelling, couple gameplay adjustments, dynamic experience gain

--- a/src/client/talk/dialog.box.styl
+++ b/src/client/talk/dialog.box.styl
@@ -1,11 +1,14 @@
 .dialog-box
-  left -90px
-  top 55px
-  width 200px
-  height 170px
-  background red
   position absolute
+  left -170px
+  top 75px
+  min-width 200px
+  max-width 300px
+  min-height 170px
+  background honeydew
   border-radius 10px
+  border 2px solid black
+  padding 5px
   font-size 1.3em
   text-align center
   z-index 1001
@@ -30,7 +33,12 @@
 
 .dialog-box-close
   position absolute
-  width 90px
-  height 40px
   bottom 0px
-  right 0px
+  right 5px
+  font-size 0.7em
+
+.story-box-open
+  position absolute
+  bottom 0px
+  left 5px
+  font-size 0.7em
