--- a/src/client/talk/talk.screen.styl
+++ b/src/client/talk/talk.screen.styl
@@ -5,6 +5,9 @@
   left 50%
   margin-left -820px
   border 1px solid white
+  background-image url('../../../assets/img/bg/lounge.jpg')
+  background-size 100% 100%
+  background-repeat no-repeat
   animation fadeIn 1.5s
 
 #TalkToDashboard
