improved intro, color stylings and conveniences for player, improved registration confirmation

--- a/src/client/agents/scrollbar/agentscrollbarnavbutton.styl
+++ b/src/client/agents/scrollbar/agentscrollbarnavbutton.styl
@@ -19,3 +19,9 @@
   border-left 40px solid darkslateblue
   border-bottom 67px solid transparent
   z-index 1001
+
+.agent-scroll-bar-nav-button.right.on-mission
+  border-left 40px solid darkred
+
+.agent-scroll-bar-nav-button.left.on-mission
+  border-right 40px solid darkred
