--- a/src/client/auth/login.styl
+++ b/src/client/auth/login.styl
@@ -40,6 +40,7 @@
     color silver
 
   .error-message
+    background rgba(0, 0, 0, 1)
     color red
     font-weight bold
     opacity 0.9
@@ -67,3 +68,10 @@
   background rgba(0, 0, 0, 0.5)
   color white
   font-size 1.8em
+
+.recommended-browsers
+  position absolute
+  bottom 10px
+  left 10px
+  color white
+  background rgba(0, 0, 0, 0.7)
