--- a/src/client/auth/signup.styl
+++ b/src/client/auth/signup.styl
@@ -53,6 +53,7 @@
     -moz-border-bottom-color cornflowerblue
 
   .error-message
+    background rgba(0, 0, 0, 1)
     color red
     font-weight bold
     opacity 0.9
