--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -48,9 +48,10 @@
   height 50px
   left 720px
   top -25px
-  background-color darkslateblue
-  border 5px solid black
+  background rgba(62, 71, 139, 0.9)
+  border 5px solid darkslateblue
   border-radius 1em
+  color white
   text-align center
   font-weight bold
   font-size 1.5em
