--- a/src/client/briefing/desk.plan.toggle.styl
+++ b/src/client/briefing/desk.plan.toggle.styl
@@ -4,7 +4,13 @@
   height 114px
   bottom 315px
   right 10px
-  font-size 1.4em
-  font-weight bold
   z-index 0
   transform skew(35deg)
+
+#TablePlanToggleText
+  position absolute
+  color white
+  font-size 1.2em
+  font-weight bold
+  top -30px
+  transform skew(-35deg)
