--- a/src/client/dashboard/agentswindow/agentondisplay.styl
+++ b/src/client/dashboard/agentswindow/agentondisplay.styl
@@ -1,27 +1,30 @@
 #AgentOnDisplay
   position absolute
   left 505px
-  top 0px
+  top -50px
   width 425px
   height 265px
   border 1px solid black
+  transform skew(7deg)
 
 #AgentShiftLeft
   position absolute
   left 470px
-  top 20px
+  top -30px
   width 0
   height 0
   border-top 90px solid transparent
   border-right 30px solid grey
   border-bottom 90px solid transparent
+  transform skew(7deg)
 
 #AgentShiftRight
   position absolute
   left 940px
-  top 20px
+  top -30px
   width 0
   height 0
   border-top 90px solid transparent
   border-left 30px solid grey
   border-bottom 90px solid transparent
+  transform skew(7deg)
