--- a/src/client/dashboard/missiontalk/mission.talk.styl
+++ b/src/client/dashboard/missiontalk/mission.talk.styl
@@ -9,7 +9,7 @@
   flex-wrap wrap
   align-items center
   justify-content space-around
-  background-color darkcyan
+  background rgba(155, 155, 155, 0.9)
   font-weight bold
   font-size 1.3em
   border 5px solid black
