--- a/src/client/gameflow/intermediate.goal.styl
+++ b/src/client/gameflow/intermediate.goal.styl
@@ -12,8 +12,8 @@
 #IntermediateGoal
   position absolute
   max-width 320px
-  top 65px
-  left 30px
+  top 40px
+  left 40px
   background rgba(0, 0, 0, 1)
   border 3px solid ghostwhite
   color ghostwhite
@@ -21,6 +21,7 @@
   font-weight bold
   overflow hidden
   animation expandInLeft 1.5s
+  transform rotate(-15deg) skew(-10deg)
 
 #FirstMissionGoal.done
   text-decoration line-through
