--- a/src/client/mission/missioncard/missiontitle.styl
+++ b/src/client/mission/missioncard/missiontitle.styl
@@ -6,7 +6,7 @@
   text-align center
   width 570px
   height 50px
-  background-color black
+  background rgba(0, 0, 0, 0)
   border 1px solid black
   top 0px
   font-size 2.2em
