--- a/src/client/mission/missioncard/results/mission.result.list.styl
+++ b/src/client/mission/missioncard/results/mission.result.list.styl
@@ -12,13 +12,13 @@
   // background-image url('../../../../../assets/img/bg/scratched_metal.jpg')
 
 .mission-result-list.loss
-  background-color black
+  background rgba(0, 0, 0, 0.8)
   color ghostwhite
   box-shadow 0 0 10px lightgrey inset
   padding 5px
 
 .mission-result-list.reward
-  background-color lightgrey
+  background rgba(211, 211, 211, 0.8)
   color black
   box-shadow 0 0 10px black inset
   padding 5px
@@ -39,12 +39,12 @@
   position absolute
   left 0px
   bottom 0px
-  width 274px
+  width 289px
   height 75px
 
 .mission-result-list.reward.actual
   position absolute
   right 0px
   bottom 0px
-  width 274px
+  width 289px
   height 75px
