--- a/src/client/mission/tabletoptier/rotatingdie/rotating.die.styl
+++ b/src/client/mission/tabletoptier/rotatingdie/rotating.die.styl
@@ -1,11 +1,11 @@
-#Dice0.rotating-die {
+#Dice0.rotating-die
   // position: absolute;
-  width: 100px;
-  height: 100px;
+  width 100px
+  height 100px
   // margin: 100px;
-  transform-style: preserve-3d;
-  animation: spin 25s infinite linear;
-}
+  transform-style preserve-3d
+  animation spin 25s infinite linear
+  // transform translateZ(100px) rotateX(180deg) rotateY(180deg) rotateZ(0deg)
 
 .rotating-die {
   margin 20px
