--- a/src/client/mission/tabletoptier/tabletop/tabletop.styl
+++ b/src/client/mission/tabletoptier/tabletop/tabletop.styl
@@ -4,7 +4,6 @@
   left -60px
   width 670px
   height 620px
-  border 2px solid maroon
 
 #TableTopDiceContainer
   position absolute
@@ -15,6 +14,9 @@
   flex-direction row
   align-items center
   justify-content center
+  perspective 1600px
+  perspective-origin right top
+  // border 1px solid white
 
 #MissionStartStatus
   position absolute
@@ -33,9 +35,9 @@
 
 .taskcomplete-button
   position absolute
-  width 180px
-  height 100px
+  width 150px
+  height 50px
   border 2px solid black
-  bottom 1px
-  right 185px
+  bottom 40px
+  right 235px
   animation 1s pulse 2s infinite
