--- a/src/client/tutorial/playerhistoryintro/player.history.photo.styl
+++ b/src/client/tutorial/playerhistoryintro/player.history.photo.styl
@@ -10,18 +10,19 @@
 
 .player-history-slide-text
   position absolute
-  top 370px
+  top 550px
   width 1540px
   height 50px
+  color white
   text-align center
   overflow hidden
 
 .player-history-slide-text-overlay
   display block
   position absolute
-  top 370px
+  top 550px
   right 0px
   width 1540px
   height 50px
-  background rgba(129, 30, 30, 1)
+  background rgba(0, 0, 0, 1)
   z-index 1
