--- a/src/client/agents/agentcard/agent.card.styl
+++ b/src/client/agents/agentcard/agent.card.styl
@@ -64,6 +64,8 @@
   position absolute
   top 0
   right 0
+  background rgba(0, 0, 0, 0.9)
+  color white
   z-index 101
 
 .save-agent-button
@@ -85,10 +87,18 @@
   top 0
   right 0
   color black
-  z-index 10
+  font-size 1.2em
+  color white
+  right 10px
+  z-index 11
+  cursor pointer
 
 #HideSelf
   position absolute
-  top 0
-  right 0
-  color black
+  top 0px
+  right 0px
+  color white
+  top 20px
+  right 120px
+  cursor pointer
+  font-size 1.1em
