--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -67,9 +67,10 @@
   height 50px
   left 720px
   top -25px
-  background-color grey
-  border 5px solid black
+  background rgba(0, 0, 0, 0.8)
+  border 5px solid grey
   border-radius 1em
+  color ghostwhite
   text-align center
   font-weight bold
   font-size 1.5em
@@ -101,10 +102,10 @@
   position absolute
   text-align center
   font-size 1.2em
-  top 100px
-  left 400px
-  width 840px
-  height 600px
+  top 60px
+  left 450px
+  width 740px
+  height 640px
   padding 10px
   background rgba(0, 0, 0, 0.9)
   color white
