--- a/src/client/mission/mission.screen.styl
+++ b/src/client/mission/mission.screen.styl
@@ -23,14 +23,15 @@
 
 #MissionScreenLabel
   position absolute
-  margin-left -150px
+  margin-left -240px
   left 50%
-  width 300px
+  width 480px
   height 50px
   top -25px
-  background-color grey
-  border 5px solid black
+  background rgba(0, 0, 0, 0.9)
+  border 5px solid ghostwhite
   border-radius 1em
+  color ghostwhite
   text-align center
   font-weight bold
   font-size 1.5em
