--- a/src/client/mission/tabletoptier/tabletop/probability.bar.styl
+++ b/src/client/mission/tabletoptier/tabletop/probability.bar.styl
@@ -4,7 +4,7 @@
   left 1px
   width 160px
   height 100px
-  border 5px solid red
+  // border 5px solid red
   color red
-  font-size 2.5em
+  font-size 2em
   padding 10px
