--- a/src/client/talk/talk.screen.styl
+++ b/src/client/talk/talk.screen.styl
@@ -38,9 +38,10 @@
   height 50px
   left 720px
   top -25px
-  background-color grey
+  background rgba(0, 0, 0, 1)
   border 5px solid black
   border-radius 1em
+  color white
   text-align center
   font-weight bold
   font-size 1.5em
