--- a/src/client/tutorial/curved.tail.arrow.styl
+++ b/src/client/tutorial/curved.tail.arrow.styl
@@ -5,7 +5,7 @@
   width 0
   height 0
   border-top 36px solid transparent
-  border-right 36px solid darkblue
+  border-right 36px solid grey
   transform rotate(110deg)
   z-index 10011
 
@@ -13,7 +13,7 @@
   content ''
   position absolute
   border 0 solid transparent
-  border-top 12px solid darkblue
+  border-top 12px solid grey
   border-radius 80px 0 0 0
   top -48px
   left -36px
