--- a/src/client/tutorial/tutorial.screen.styl
+++ b/src/client/tutorial/tutorial.screen.styl
@@ -25,3 +25,15 @@
   color ghostwhite
   background-color black
   font-size 1.5em
+
+#TutorialAnnounce
+  position absolute
+  background-color grey
+  border 3px solid black
+  border-radius 1em
+  font-size 1.3em
+  max-width 1040px
+  top 320px
+  left 300px
+  padding 50px
+  z-index 11
