experience flash in mission, removed agent setETA and its logic in components, missionresults componentization now they display chain for noticed and discovered

--- a/src/client/app/animations.styl
+++ b/src/client/app/animations.styl
@@ -17,6 +17,13 @@
     opacity: 1
     transform: none
 
+@keyframes fadeOutUp
+  0%
+    opacity: 1
+  100%
+    opacity: 0
+    transform: translate3d(0, -100%, 0)
+
 @keyframes flipInX
   0%
     transform: perspective(400px) rotate3d(1, 0, 0, 90deg)
