--- a/src/client/mission/agentstier/buttons/escapeprotocol.styl
+++ b/src/client/mission/agentstier/buttons/escapeprotocol.styl
@@ -2,6 +2,8 @@
   position absolute
   width 150px
   height 35px
-  bottom 35px
-  right 0px
+  bottom 115px
+  right 10px
   border 5px solid lavender
+  animation 1s pulse 2s infinite
+  border-radius 1em
