--- a/src/client/briefing/activemission/active.mission.toggle.styl
+++ b/src/client/briefing/activemission/active.mission.toggle.styl
@@ -6,3 +6,10 @@
   left 685px
   z-index 0
   transform rotate(1deg)
+
+#ActiveMissionToggleText
+  position absolute
+  color white
+  font-size 1.2em
+  font-weight bold
+  top -35px
