--- a/src/client/briefing/mission.list.toggle.styl
+++ b/src/client/briefing/mission.list.toggle.styl
@@ -6,3 +6,12 @@
   left 76px
   z-index 0
   transform rotate(-4deg)
+
+#MissionListToggleText
+  position absolute
+  color white
+  font-size 1.2em
+  font-weight bold
+  top -35px
+  left -10px
+  transform rotate(-4deg)
