--- a/src/client/briefing/briefing.screen.styl
+++ b/src/client/briefing/briefing.screen.styl
@@ -111,3 +111,19 @@
   left 300px
   padding 50px
   z-index 101
+
+#BriefingQuickSave
+  position absolute
+  bottom 10px
+  left 10px
+  height 96px
+  width 96px
+  background-image url('../../../assets/img/icons/floppy_disk.png')
+  background-size 100% 100%
+  background-repeat no-repeat
+
+#BriefingQuickSaveText
+  position absolute
+  color white
+  top -15px
+  font-weight bold
