--- a/src/client/dashboard/missionswindow/mercury.network.styl
+++ b/src/client/dashboard/missionswindow/mercury.network.styl
@@ -10,5 +10,14 @@
   height 110px
   color silver
   background-color black
-  margin 5px
+  margin -5px
   font-size 3em
+
+.mercury-network-button.double
+  font-size 2.1em
+  border-radius 1.5em
+  border 1px outset white
+  padding 10px
+  padding-top 30px
+  padding-left 20px
+  cursor pointer
