dynamic experience gain, patreon logo

--- a/src/client/dashboard/optionswindow/options.window.styl
+++ b/src/client/dashboard/optionswindow/options.window.styl
@@ -63,3 +63,10 @@
   width 190px
   color black
   font-size 1.2em
+
+.patreon-logo-small
+  position absolute
+  height 96px
+  width 96px
+  right 40px
+  bottom 340px
