correct handling of actionchoose equipmenteffect in interaction with WPAS, player agent is starting as loyal

--- a/src/client/mission/agentstier/buttons/lockeddicecontainer.styl
+++ b/src/client/mission/agentstier/buttons/lockeddicecontainer.styl
@@ -1,7 +1,14 @@
 .locked-dice-container
   position absolute
-  width 100px
-  height 100px
+  width 110px
+  height 110px
   bottom 230px
   right 0px
   border 5px solid orange
+
+.locked-dice-container-help
+  position absolute
+  height 110px
+  width 110px
+  left -120px
+  color ghostwhite
