--- a/src/client/mission/mission.screen.styl
+++ b/src/client/mission/mission.screen.styl
@@ -1,5 +1,5 @@
 /*Mission Tracking Screen layout*/
-#MissionTrackingScreen
+#MissionScreen
   position absolute
   width 1640px
   height 860px
@@ -55,3 +55,15 @@
   background rgba(150, 150, 150, 1)
   border 5px solid black
   z-index 1011
+
+#MissionAnnounce
+  position absolute
+  background-color grey
+  border 3px solid black
+  border-radius 1em
+  font-size 1.3em
+  max-width 1040px
+  top 320px
+  left 900px
+  padding 50px
+  z-index 101
