hotfix for old games fallback option

--- a/src/client/dashboard/dashboard.screen.styl
+++ b/src/client/dashboard/dashboard.screen.styl
@@ -111,3 +111,24 @@
   color white
   border 5px solid black
   z-index 1011
+
+#CleanSlate
+  position absolute
+  width 600px
+  height 300px
+  border 1px solid red
+  left 520px
+  top 60px
+  font-size 1.3em
+  font-weight bold
+  text-align center
+  color red
+
+#CleanStartNewGameButton
+  position absolute
+  width 220px
+  height 45px
+  background-color darkred
+  font-size 1.2em
+  right 20px
+  bottom 20px
