color of eq matches dice actions, touch event handled

--- a/src/client/agents/agentcard/agent.equipment.picture.placeholder.styl
+++ b/src/client/agents/agentcard/agent.equipment.picture.placeholder.styl
@@ -33,21 +33,21 @@
   background-image url('../../../../assets/img/equipments/E1E.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color paleturquoise
+  background-color darkgreen
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.CustomTools
   background-image url('../../../../assets/img/equipments/E2E.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color paleturquoise
+  background-color darkgreen
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.WPAS
   background-image url('../../../../assets/img/equipments/WPAS_256.png')
   background-size 100% 100%
   background-repeat no-repeat
-  background-color paleturquoise
+  background-color darkgreen
   box-shadow 0 0 10px black inset
 
 .agent-equipment-picture-placeholder.HiredGun
