--- a/src/client/introduction/a.big.screen.styl
+++ b/src/client/introduction/a.big.screen.styl
@@ -20,7 +20,7 @@
 #LoginBigScreenButton
   position absolute
   left 10px
-  bottom 20px
+  top 100px
   background-color grey
-  font-size 1.8em
+  font-size 1.3em
   border 3px solid black
