--- a/src/client/equipments/equipment.styl
+++ b/src/client/equipments/equipment.styl
@@ -150,21 +150,21 @@
 
 #HandyKit > .equipment-stock-item
   background url('../../../assets/img/equipments/E1E.png')
-  background-color paleturquoise
+  background-color darkgreen
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #CustomTools > .equipment-stock-item
   background url('../../../assets/img/equipments/E2E.png')
-  background-color paleturquoise
+  background-color darkgreen
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
 
 #WPAS > .equipment-stock-item
   background url('../../../assets/img/equipments/WPAS_256.png')
-  background-color paleturquoise
+  background-color darkgreen
   background-size 100% 100%
   background-repeat no-repeat
   box-shadow inset 0 0 10px black
